CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-06 15:32:40
+lastsearch = 2024-08-06 20:21:54
 
 [everon.online]
 match = 15.4%%
@@ -29,7 +29,7 @@ url = http://www.changagoidemeveron.vn/3/everon/chan-bon-mua-everon-lite-eve-01.
 [www.everonvni.vn]
 match = 30.8%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOoq3V9AoqkCDncmLXIHQDaUE798-fi8DYKrFibd19jSbm504zDnY
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [www.tiktok.com]
 match = -53.8%%
@@ -122,9 +122,9 @@ title = Vở ôly Hồng Hà 0555 48 trang - thế giới văn phòng phẩm
 url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 
 [everonvn.com.vn]
-match = 3.8%%
-title = Bảng giá bán lẻ chăn bốn mùa Everon
-url = https://everonvn.com.vn/51/chan-bon-mua-everon
+match = -88.5%%
+title = Hướng dẫn cách giặt ruột gối sạch sẽ bằng tay và bằng máy giặt
+url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
 
 [www.youtube.com]
 match = -69.2%%
