--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-06 13:23:43
+lastsearch = 2024-08-06 20:27:28
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -95,4 +95,9 @@ url = https://bizonauto.com/index3.php?name=https://xn--80aqaehuekgcjc7j.xn--p1a
 match = -25.0%%
 title = Blankets, Bedding, Home, Furniture & DIY
 url = https://picclick.co.uk/Home-Furniture-DIY/Bedding/Blankets/
+
+[thegioidemloxo.com]
+match = 10.7%%
+title = Chăn Ga Gối Đệm giá rẻ mùa cưới
+url = https://thegioidemloxo.com/home/search.asp?keyword=Vận-chuyển
 
