--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-06 12:44:43
+lastsearch = 2024-08-06 20:36:09
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,14 +132,14 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Kathleen Fisch
-url = https://profiles.ucsd.edu/kathleen.fisch
+match = -41.7%%
+title = Tommi Gaines
+url = https://profiles.ucsd.edu/tommi.gaines
 
 [som.cuanschutz.edu]
-match = -163.2%%
-title = Robin Shandas, PhD Professor, University of Colorado - Denver
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17849
+match = -121.1%%
+title = Rubin Tuder, MD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 5.3%%
+title = Arun Wiita, MD, PhD
+url = https://profiles.ucsf.edu/arun.wiita
 
 [profiles.stanford.edu]
 match = -36.8%%
@@ -412,8 +412,8 @@ title = List-of-Successfully-Registered-Entities-and-Physicians
 url = https://www.dhcs.ca.gov/Documents/List-of-Successfully-Registered-Entities-and-Physicians.xlsx
 
 [profiles.sc-ctsi.org]
-match = -47.4%%
-title = Heinz-Josef Lenz, MD - USC Profiles
+match = -105.3%%
+title = Heinz-Josef Lenz - USC Health Sciences Profiles
 url = https://profiles.sc-ctsi.org/heinz-josef.lenz
 
 [www.prismaweb.org]
