--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-06 13:25:44
+lastsearch = 2024-08-06 20:28:32
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,14 +142,14 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -194.1%%
+title = Formononetin: A Review of Its Anticancer Potentials and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6676344/
 
 [books.google.com]
-match = -7.7%%
-title = Index Medicus
-url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqgiTzlE&sig=ACfU3U2npmYYWmis1vR6Hf5vtkFFcQoADA&hl=en&sa=X&ved=2ahUKEwi7-f-48rSHAxU1DkQIHYeMAKYQ6AF6BAgoEAM
+match = -217.6%%
+title = Mao's Crusade: Politics and Policy Implementation in China's ...
+url = https://books.google.com/books?id=9pPxwn6EvR4C&pg=PA127&lpg=PA127&dq=chan+4+kg+mao+tan&source=bl&ots=XSXIYzeh5h&sig=ACfU3U2PG-Waq7o0tOAaLh22NQm7KZRbnA&hl=en&sa=X&ved=2ahUKEwiawNuovOCHAxULLzQIHaocFbcQ6AF6BAgeEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
