--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-06 15:38:04
+lastsearch = 2024-08-06 20:24:42
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -132,9 +132,9 @@ title = The Bodog Group|Nơi Cá Cược Casino Hàng Đầu Châu Á
 url = https://hawater.com.vn/bmw769346.xhtm
 
 [vietnamese.alibaba.com]
-match = -153.3%%
-title = Chiều Cao HT-M15-3 220V Nhựa Bể Nước Chuyển Đổi ...
-url = https://vietnamese.alibaba.com/product-detail/HEIGHT-HT-M15-3-220v-Plastic-60724422925.html
+match = -113.3%%
+title = Chiều Cao HT-M15-8 Công Tắc Phao Enm-10 Flygt
+url = https://vietnamese.alibaba.com/product-detail/HEIGHT-HT-M15-8-flygt-enm-60769591286.html
 
 [congnghehoangtien.com]
 match = -160.0%%
