--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-06 18:26:46
+lastsearch = 2024-08-06 20:26:25
 
 [www.youtube.com]
 match = -52.0%%
@@ -107,9 +107,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 12.5%%
+title = Lịch sử Đài Loan
+url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
 
 [www.nguoi-viet.com]
 match = 4.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOorZC5Q7S1iBBhyMMZl0kMlyW5C6XGSAZT-PmzYRYU3mnbRe6JWu
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
