--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-06 17:39:49
+lastsearch = 2024-08-06 20:27:49
 
 [scholar.google.com]
 match = -43.8%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -100.0%%
-title = Phim chiếu rạp | Lịch chiếu phim trên MoMo
-url = https://www.momo.vn/cinema/lich-chieu
+match = -118.8%%
+title = Đặt mua vé xem phim online ngay trên MoMo
+url = https://www.momo.vn/cinema
 
 [baotintuc.vn]
 match = -37.5%%
@@ -800,4 +800,9 @@ url = https://vbpl.vn/hanoi/Pages/vbpqen-toanvan.aspx?dvid=305&ItemID=9304
 match = -187.5%%
 title = Herbs and Spices (Ginger, Turmeric, Cinnamon, Anise,.)
 url = https://www.yellowpages.com.vn/categories/303355/spices_herbs_(ginger_turmeric_cinnamon_anise,.).html?page=18
+
+[medlatec.vn]
+match = -150.0%%
+title = Nội mạc tử cung dày bao nhiêu là dễ thụ thai nhất?
+url = https://medlatec.vn/tin-tuc/noi-mac-tu-cung-day-bao-nhieu-la-de-thu-thai-nhat-s74-n19392
 
