--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-06 18:15:20
+lastsearch = 2024-08-06 20:29:34
 
 [shopee.vn]
 match = -52.4%%
@@ -37,9 +37,9 @@ title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -119.0%%
-title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
-url = https://comehome.com.vn/blog/post/giuong-ngu-doi
+match = -90.5%%
+title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
+url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
 
 [www.kymdan.com]
 match = 14.3%%
@@ -47,9 +47,9 @@ title = bảng giá sản phẩm kymdan
 url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 
 [www.lazada.vn]
-match = -109.5%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+match = 19.0%%
+title = Thảm Trải Giường Cao Cấp Loại 1.6m
+url = https://www.lazada.vn/products/tham-trai-giuong-cao-cap-loai-16m-i245665123.html?srsltid=AfmBOoqNPu3XvKBDhQ_lHOeDmJUm-JlLxNObWieNcTrWXJe3-hGcrxIC
 
 [www.facebook.com]
 match = 33.3%%
