--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-06 20:11:42
+lastsearch = 2024-08-06 20:24:20
 
 [everonvn.com.vn]
 match = -11.1%%
-title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+title = Vỏ Gối Everon Guardian Giảm Giá
+url = https://everonvn.com.vn/everon/2269/vo-goi-everon-guardian
 
 [www.lazada.vn]
 match = -161.1%%
