CI images update

--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-27 21:31:03
 lastsearch = 2024-08-06 20:34:26
 
 [www.everonvn.vn]
-match = 69.2%%
-title = Đệm lò xo Everon Pocket Premium
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
+match = -61.5%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [www.diepxuan.com]
 match = 61.5%%
