--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-06 06:21:20
+lastsearch = 2024-08-06 20:42:29
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/ksc/
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=0a6ab453dca08831&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjb86aV-d6HAxXWhIkEHdBcFeAQsZYEegQIUBAC
+url = https://www.google.com/search?sca_esv=e4282b25c8982f10&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjE1u63v-CHAxU8kIkEHbwjDnIQsZYEegQIVRAC
 
 [www.outlookindia.com]
 match = -170.0%%
@@ -422,9 +422,9 @@ title = Outlook India - India's Best Magazine| Find Latest News, Top ...
 url = https://www.outlookindia.com/
 
 [twitter.com]
-match = -25.0%%
-title = Big Bad Bear (@BigBadBear_) / X
-url = https://twitter.com/bigbadbear_
+match = -55.0%%
+title = League of Legends (@LeagueOfLegends) / X
+url = https://twitter.com/leagueoflegends
 
 [www.girlsnotbrides.org]
 match = 0.0%%
