--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-06 18:55:56
+lastsearch = 2024-08-06 20:45:36
 
 [demxanh.com]
 match = 26.1%%
 title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html
+url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOoo5ZF8aPciSo8LTo238Si6-gcRiqtCIqP8RtsVxhzKqJe6IWIjK
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 26.1%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOooNvwDd7_savtWH7g_kwPCn9VttemHFuPRxphl9D28axkogcWO_
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOopVhv-z72rHNGYtzkFSpIjTxMJbUbZRlp6AkUi6xdhuhIHLBl7-
 
 [www.youtube.com]
 match = -87.0%%
