--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-06 14:37:41
+lastsearch = 2024-08-06 20:42:08
 
 [www.muji.com]
 match = -33.3%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOopWiX-C7DNcZ78N3d6X2kMNLTkuNDIgALCwJvy8q29h-5PuXjn9
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoroaQ8hEUvE0b1uBLBQEEI2WsSTCcunvwXP20bp5C4jrWPZk9P1
 
 [sugoimart.com]
 match = -257.1%%
