--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-06 18:58:00
+lastsearch = 2024-08-06 20:39:38
 
 [www.youtube.com]
 match = -147.4%%
@@ -304,7 +304,7 @@ url = https://thegioihoa.net/post/hoa-chieu-tim-va-nhung-y-nghia-sau-sac-cua-chu
 [nhavuonkhanhvo.com]
 match = -115.8%%
 title = Cây Hoa Trà My Cổ 7 Năm Tuổi Đang Hoa Cao 1,2m - 1,5m
-url = https://nhavuonkhanhvo.com/products/cay-hoa-tra-my-co-7-nam-tuoi-dang-hoa-cao-1-2m-1-5m?srsltid=AfmBOorAMt-_yt755laHCPpxdJhzjbZpzHW5C8p4e5s8R7vlxe_1Chlz
+url = https://nhavuonkhanhvo.com/products/cay-hoa-tra-my-co-7-nam-tuoi-dang-hoa-cao-1-2m-1-5m
 
 [ttkhcn.baria-vungtau.gov.vn]
 match = -68.4%%
