--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-06 18:48:39
+lastsearch = 2024-08-06 20:32:17
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -111.8%%
-title = HOAs are the worst #fyp #goviral #foryoupage
-url = https://www.tiktok.com/@koltindarley/video/7344882945380994347
+match = -11.8%%
+title = HOA fined me for this #hoa
+url = https://www.tiktok.com/@koltindarley/video/7320370539850206507
 
 [www.steadily.com]
 match = 0.0%%
@@ -187,9 +187,9 @@ title =
 url = https://www.statesman.com/story/news/state/2024/05/08/hoa-texas-laws-2024-homeowners-association-fines-fees-penalties-complaints/73599110007/
 
 [www.youtube.com]
-match = -170.6%%
-title = Tổng Hợp 17 Tiết Mục Công Diễn Hay Nhất Chị Đẹp Đạp Gió ...
-url = https://www.youtube.com/watch?v=aphqudg0U5g
+match = -147.1%%
+title = EM XINH - MONO x Thu Phương, Ninh Dương Lan Ngọc ...
+url = https://www.youtube.com/watch?v=2TfzQDnEPww
 
 [winknews.com]
 match = -5.9%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -105.9%%
 title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdnog6ZdS&sig=ACfU3U2zfDmIbdhFWrGUeQQoyVgHnKkP-g&hl=en&sa=X&ved=2ahUKEwiPoqmQm-CHAxU-6ckDHQICBzUQ6AF6BAgnEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdnoh5_gY&sig=ACfU3U2GdXuHjpRLBhScz9ncAbkxbg5ERQ&hl=en&sa=X&ved=2ahUKEwjV-6SUveCHAxVfMNAFHSegGpsQ6AF6BAgpEAM
 
 [www.house.gov]
 match = 11.8%%
