--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-08-06 19:59:44
+lastsearch = 2024-08-06 20:41:47
 
 [shope.io.vn]
 match = -59.3%%
@@ -12,9 +12,9 @@ title = Ruột gối đầu họa tiết kẻ VANDA bông gòn cao cấp màu HO
 url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-hot-cap-nhat-lien-tuc-ma-sc55-8
 
 [www.diepxuan.com]
-match = 29.6%%
-title = Ruột gối kê WDR lông vũ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html?srsltid=AfmBOoq4lri-cI7psNi8t5dMK01VSzbpkHuAxiuxYj1llJfXP0nFSaoN
+match = -18.5%%
+title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOoq3aUygmUrGtWAACw8NKCcePH096QC09ltSz9vMjHvKqUPTEB9w
 
 [giasale.com]
 match = -59.3%%
