--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-06 14:26:28
+lastsearch = 2024-08-06 20:55:56
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
 url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
-match = 6.5%%
-title = chiếu trúc hạt giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+match = 48.4%%
+title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
 
 [tiki.vn]
 match = -19.4%%
@@ -34,7 +34,7 @@ url = https://demxanh.com/chieu-truc.html
 [www.sendo.vn]
 match = 3.2%%
 title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117423285.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600426_undefined_-1_cateLvl2_0_45_23_-1
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117571777.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600324_undefined_-1_cateLvl2_0_35_23_-1
 
 [www.lazada.vn]
 match = 16.1%%
