--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-06 20:21:33
+lastsearch = 2024-08-06 21:01:07
 
 [changagoidemtamhao.com]
-match = -10.0%%
-title = Đệm PYEODA
-url = https://changagoidemtamhao.com/dem-pyeoda
+match = -5.0%%
+title = Bộ Chăn Ga Gối PYEODA LTT
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
 
 [demsingapore.com]
-match = -70.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
+match = -75.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 14
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-14.html
 
 [demxanh.com]
-match = -40.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html
+match = -80.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
 
 [www.facebook.com]
-match = -45.0%%
-title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
-url = https://www.facebook.com/pyeoda.vn/?locale=vi_VN
+match = -75.0%%
+title = Vua Nệm - 🌼 SỞ HỮU BỘ CHĂN GA GẤM CAO CẤP ...
+url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-cao-cấp-pyeoda-tiết-kiệm-tới-66-vua-nệm-xả-kho-188-39-đồn/1462549323889165/
 
 [shopee.vn]
 match = -25.0%%
@@ -115,4 +115,9 @@ url = https://www.youtube.com/watch?v=9Yf1j0Ru3dU
 match = -145.0%%
 title = nội ngoại thất] - Nệm Xinh chuyên cung cấp sỉ/lẻ chăn ga ...
 url = https://www.otofun.net/threads/nem-xinh-chuyen-cung-cap-si-le-chan-ga-goi-nem-tu-binh-dan-toi-cao-cap-lien-he-094-112-0822.1392580/page-32
+
+[noahstore.vn]
+match = -80.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 12
+url = https://noahstore.vn/vai-han-quoc-tencel-ha-noi/
 
