--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-08-06 16:24:14
+lastsearch = 2024-08-06 20:47:29
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -29,7 +29,7 @@ url = https://everonhn.com.vn/tam-trai-tien-ich-everon
 [everonvn.com.vn]
 match = 18.2%%
 title = Bảng giá bán Tấm topper Everon AVIV
-url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
+url = https://everonvn.com.vn/everon/2215/topper-everon-aviv?srsltid=AfmBOooNL2UidHws10kNY7-cbl0BhN5d78dsivrlNGiVDHz1tmJXzefb
 
 [everon.com]
 match = -113.6%%
@@ -49,7 +49,7 @@ url = https://everonminhkhai.com/product-category/dem/tam-trai-topper/
 [www.lazada.vn]
 match = -77.3%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/
+url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOoo7O7QSU5gu-VZmIsYzH13Y0ZuibI6lsaDtzQwRjW8nUWpvuJj5
 
 [kbedding.vn]
 match = 50.0%%
