CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-06 20:26:25
+lastsearch = 2024-08-06 21:13:24
 
 [www.youtube.com]
 match = -52.0%%
@@ -329,7 +329,7 @@ url = https://znews.vn/dai-loan-tap-tran-voi-ten-lua-diet-tang-post1307278.html
 [www.luavietours.com]
 match = -36.0%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
-url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=31-08
 
 [www.instagram.com]
 match = -80.0%%
