--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-06 16:41:01
+lastsearch = 2024-08-06 21:12:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -720,4 +720,9 @@ url = https://www.marines.mil/Portals/1/Publications/US Marines in Vietnam An Ex
 match = 0.0%%
 title = 
 url = https://historyhub.history.gov/military-records/navy-marine-corps-and-coast-guard-records/f/navy-marine-coast-guard-forum/15733/looking-for-marine-corps-pictures-of-myself-from-1969-to-1989
+
+[www.atlantahistorycenter.com]
+match = 0.0%%
+title = 
+url = https://www.atlantahistorycenter.com/exhibitions/more-than-self-living-the-vietnam-war/being-there/
 
