--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-06 20:55:14
+lastsearch = 2024-08-06 21:14:46
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html?srsltid=AfmBOopqXvvdykCjplzSfYYQYHfiYPCLl6sDo17JG450sL4tfertD065
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
 match = -105.0%%
@@ -24,7 +24,7 @@ url = https://noithatami.com/giuong-ngu-boc-dem-1m8/
 [ninhouse.vn]
 match = -45.0%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap?srsltid=AfmBOootnbXWMtyQmcWinIy5lEBugWglOefl9YV1hPtHzNUqHbs0VzrS
+url = https://ninhouse.vn/collections/drap
 
 [giuongxep.com]
 match = -70.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOopsTj-RKRvZ0C7kYtU2UU5GYsWZhKEl1mVAvqS-9eCKbD6t2VUT
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
 
 [sofaphongkhach.vn]
 match = -40.0%%
