--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-06 20:45:24
+lastsearch = 2024-08-06 21:22:46
 
 [demxanh.com]
 match = -135.3%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoovB2UT93u0YbYkMYHzdJJQmXzX2UbT9prwkjhMZ46xNTpAv4ro
+url = https://demxanh.com/chieu-truc.html
 
 [dem24h.vn]
 match = -29.4%%
