CI images update

--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-06 14:43:37
+lastsearch = 2024-08-06 21:41:11
 
 [demxanh.com]
 match = -9.1%%
@@ -155,4 +155,9 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cach-tu-sua-chieu-truc-neu
 match = -130.0%%
 title = CHIẾU TRÚC
 url = https://hethongnemtot.com/chieu-truc
+
+[www.sendo.vn]
+match = 12.1%%
+title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
+url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117423477.html
 
