--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-06 16:52:08
+lastsearch = 2024-08-06 21:37:03
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html?srsltid=AfmBOooZgZX7fyRXmVOuWklztnvnnvg0kzEjqEymd8x2eObdUK0CJdMI
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 04
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,8 +17,8 @@ title = Thảm ghế thảm giường - Trang 5
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+match = -109.1%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
@@ -57,9 +57,9 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOooO7HWfriFVPHLUPIO4v01Qt_b0Y9hoEsjJoQE9MEzGzy1bjgvr
+match = -118.2%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất hiện nay
+url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
 match = 15.8%%
@@ -79,7 +79,7 @@ url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 [vikicare.com]
 match = 13.6%%
 title = thảm đá nhiệt nóng - Vikicare
-url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOoq6qIN6qvv_RJNDeh-vDYg3jepS0GQZmYhgxoKwHiVSdtNLfS1U
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/
 
 [www.linkedin.com]
 match = -86.4%%
@@ -115,4 +115,9 @@ url = https://www.lazada.vn/products/1-tam-ga-trai-giuong-tham-my-vien-dong-bang
 match = -72.7%%
 title = [2024] Top 10 Ga Trải Giường tốt nhất hiện nay ...
 url = https://vn.my-best.com/37098
+
+[www.booking.com]
+match = -136.4%%
+title = 1 clic clac 120x190 et 1 salon avec canapé convertible ...
+url = https://www.booking.com/hotel/fr/maison-de-vacances-avec-piscine-six-fours-les-plages.vi.html
 
