--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-06 17:54:26
+lastsearch = 2024-08-06 21:41:55
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -107,9 +107,9 @@ title = 14 năm Rooney ra mắt MU: Hat-trick huyền thoại, "Quỷ đầu ...
 url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-thoai-quy-dau-dan-gam-vang-c48a993554.html
 
 [www.facebook.com]
-match = -39.3%%
-title = Cây cầu treo dài nhất Đài Loan ở Đào... - Vòng quanh ...
-url = https://www.facebook.com/aroundtwn/posts/cây-cầu-treo-dài-nhất-đài-loan-ở-đào-viên-với-chiều-dài-lên-đến-303-m-rộng-12-m-/2009859765784843/
+match = -25.0%%
+title = Trust+ - HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG ...
+url = https://www.facebook.com/Trustplus1304/posts/hành-trình-peel-da-14-ngày-bằng-mandelic-acid-chỉ-180k-của-mình-thật-ra-hôm-nay-/1992134787558676/
 
 [trongdoitam1.mysapo.net]
 match = 7.1%%
