--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-06 18:23:39
+lastsearch = 2024-08-06 21:46:23
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -180.0%%
-title = MOVSA - Melbourne Overseas Vietnamese Student ...
-url = https://www.facebook.com/movsa.vn/posts/-𝐃𝐄𝐏𝐀𝐑𝐓𝐔𝐑𝐄-𝐁𝐑𝐈𝐄𝐅𝐈𝐍𝐆-𝐊𝐈𝐂𝐊-𝐒𝐓𝐀𝐑𝐓-️𝐌𝐎𝐕𝐒𝐀-𝐱-𝐒𝐄𝐓-𝐄𝐃𝐔𝐂𝐀𝐓𝐈𝐎𝐍___________________________/754660916690225/
+match = -240.0%%
+title = Địa điểm ăn uống - BÒ BÍT TẾT (Beefsteak) * (Hình) Hoa ...
+url = https://www.facebook.com/photo.php?fbid=147183691975666&id=140144812679554&set=a.140519585975410&locale=vi_VN
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -222,9 +222,9 @@ title = Thánh Lễ 2024 tại CĐ Th. Giuse Khang - Hamburg
 url = http://www.mucvu-borsum.de/?muc=a&g1=204&ba=1&b1=28&b2=0&b3=14&ca=1&c1=91&c2=0&c3=0&da=1&d1=0&d2=0&d3=0
 
 [www.tiktok.com]
-match = -246.7%%
-title = Trend về D2 Bình Thạnh rồi nè Tui đi ăn lạp xưởng xúc xích ...
-url = https://www.tiktok.com/@hi.vidayyy/video/7322653266637032706
+match = -20.0%%
+title = Outwell Wood Lake 7atc
+url = https://www.tiktok.com/discover/outwell-wood-lake-7atc
 
 [vinhphuc.gov.vn]
 match = -180.0%%
