--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-06 21:18:54
+lastsearch = 2024-08-06 21:38:25
 
 [www.diepxuan.com]
-match = 45.5%%
-title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 27.3%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
@@ -97,8 +97,8 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [decosy.com]
-match = -50.0%%
-title = Furniture & Decoration - Decosy Vietnam
+match = 4.5%%
+title = Furniture & Decoration
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [maybedding.vn]
@@ -127,9 +127,9 @@ title = Pin by Alesha Faicco on Desks - bedroom
 url = https://www.pinterest.com/pin/pin-von-alesha-faicco-auf-desks-bedroom--565483296932165432/
 
 [tonybed.com]
-match = -36.4%%
-title = Bộ Drap Ga Trải Giường Tencel Màu – TCM46
-url = https://tonybed.com/bo-drap-ga-trai-giuong-tencel-mau-tcm46/
+match = -4.5%%
+title = Bộ Drap Ga Trải Giường Modal - 21
+url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
 
 [dongagroup.vn]
 match = -100.0%%
