--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-06 19:59:25
+lastsearch = 2024-08-06 22:26:43
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -470,4 +470,9 @@ url = https://hcmc.vietnam.embassy.gov.au/files/hchi/list-of-hospitals-feb-2024.
 match = -100.0%%
 title = Nhật ký quân sự: ngày 2/8 đến 4/8/2017
 url = https://luongthevinh.com.vn/home/?p=997
+
+[www.qdnd.vn]
+match = 6.7%%
+title = Chiến công trên đồi D1
+url = https://www.qdnd.vn/quoc-phong-an-ninh/chien-thang-dien-bien-phu-moc-son-lich-su/dien-bien-chien-dich/chien-cong-tren-doi-d1-770786
 
