--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-06 21:47:56
+lastsearch = 2024-08-06 22:26:22
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -314,12 +314,12 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOorai11CaTzEtmUceLUbIdPo95gWmyMikmaeXb2Phx6557bX5o7s
 
 [yato.vn]
 match = -175.0%%
 title = Bộ Cờ Lê Đảo Chiều Lắc Léo 12 Chi Tiết 8-19mm Yato YT ...
-url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885
+url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885?srsltid=AfmBOoowX8ha2mlX7VMQRY7vXqr3cxkKAmd4xne5GqHsW9NmiF_GFprt
 
 [baothaibinh.com.vn]
 match = -200.0%%
