--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-06 17:48:58
+lastsearch = 2024-08-06 22:18:06
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -745,4 +745,9 @@ url = https://medlatec.vn/tin-tuc/noi-mac-tu-cung-day-bao-nhieu-la-de-thu-thai-n
 match = -175.0%%
 title = Giá vàng miếng trượt dốc, giảm sốc 1,3 triệu đồng/lượng
 url = https://stockbiz.vn/tin-tuc/gia-vang-chieu-nay-682024-gia-vang-mieng-truot-doc-giam-soc-13-trieu-dongluong/27437802
+
+[batdongsan.com.vn]
+match = -125.0%%
+title = Mua bán đất nền dự án tại Golden Hills City
+url = https://batdongsan.com.vn/ban-dat-nen-du-an-golden-hills-city
 
