--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-08-06 20:41:47
+lastsearch = 2024-08-06 22:22:35
 
 [shope.io.vn]
 match = -59.3%%
@@ -14,7 +14,7 @@ url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-ho
 [www.diepxuan.com]
 match = -18.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOoq3aUygmUrGtWAACw8NKCcePH096QC09ltSz9vMjHvKqUPTEB9w
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
 [giasale.com]
 match = -59.3%%
