--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-06 20:06:04
+lastsearch = 2024-08-06 22:29:24
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -72.7%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -58.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -108.7%%
@@ -117,14 +117,14 @@ title = NEM jumps to a 42 week high – reasons unknown
 url = https://cryptoslate.com/nem-jumps-to-a-42-week-high-reasons-unknown/
 
 [apps.dtic.mil]
-match = -47.8%%
-title = EBB and Flow, November 1950-July 1951 - DTIC
-url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
+match = -69.6%%
+title = Task Force Smith--A Leadership Failure? - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/ADA251335.pdf
 
 [www.tiktok.com]
-match = -104.3%%
-title = Teaching Korean basics to @Nisqy I hope it helps 😈 @SK ...
-url = https://www.tiktok.com/@laurebuliiv/video/7378201658527911176
+match = 4.3%%
+title = South Korea League of Legends
+url = https://www.tiktok.com/discover/south-korea-league-of-legends
 
 [30rates.com]
 match = -52.2%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -113.0%%
+title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
+url = https://en.yna.co.kr/view/AEN20180218002800320
 
 [www.usmcu.edu]
 match = -104.3%%
