CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-06 21:57:16
+lastsearch = 2024-08-06 22:39:40
 
 [scholar.google.com]
 match = -43.8%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -118.8%%
-title = Đặt mua vé xem phim online ngay trên MoMo
-url = https://www.momo.vn/cinema
+match = -100.0%%
+title = Phim chiếu rạp | Lịch chiếu phim trên MoMo
+url = https://www.momo.vn/cinema/lich-chieu
 
 [baotintuc.vn]
 match = -37.5%%
