--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-06 16:45:07
+lastsearch = 2024-08-06 22:44:30
 
 [shopee.vn]
-match = 0.0%%
-title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
+match = -25.9%%
+title = chăn lông cừu 4kids thái lan giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 
 [www.lazada.vn]
 match = -11.1%%
@@ -17,14 +17,14 @@ title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html
 
 [tiki.vn]
-match = 11.1%%
-title = Chăn nhung tuyết hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết
+match = 7.4%%
+title = Chăn lông 4 kg hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn lông 4 kg
 
 [h5.lazada.vn]
 match = -11.1%%
-title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [tienphong.vn]
 match = 3.7%%
