--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-06 20:53:49
+lastsearch = 2024-08-06 22:31:31
 
 [demxanh.com]
 match = 11.8%%
@@ -99,7 +99,7 @@ url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 [www.lazada.vn]
 match = -5.9%%
 title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html?srsltid=AfmBOorIZA73ultQRaMAHTM289HfJVWDMTbTdVSF0S0l6U68kCQCxFrg
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
 
 [ru9.vn]
 match = 8.8%%
