--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-06 21:37:43
+lastsearch = 2024-08-06 22:46:10
 
 [demre.com.vn]
 match = 61.1%%
@@ -32,14 +32,14 @@ title = Chiếu Nhựa Gấp đôi Giá Tốt T04/2024
 url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
+match = 40.0%%
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [demxanh.com]
-match = -28.0%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = -12.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
