--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-06 21:15:27
+lastsearch = 2024-08-06 22:43:29
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Svara
 url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -338.5%%
@@ -162,9 +162,9 @@ title =
 url = https://traceup.com/mls-next-vs-ecnl-vs-ga-best-youth-soccer-league
 
 [www.ncbi.nlm.nih.gov]
-match = -284.6%%
-title = Reference Ranges of Amniotic Fluid Index in Late Third ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4312643/
+match = -323.1%%
+title = Symptomatic oral squamous papilloma of the uvula - a rare ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7067511/
 
 [www.ice.gov]
 match = 0.0%%
