--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-06 21:55:33
+lastsearch = 2024-08-06 22:34:12
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOopnE2cqo9O4D6wO_mJwFFNABPNOeBMXH5HyMxtg7kwhFDOvGxfx
 
 [www.everonqb.com]
-match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPC19056 160x200
+match = -66.7%%
+title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
 title = Ga phủ ESM20013 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
+url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html?srsltid=AfmBOorEt4gfpzIJL9xubdoKGv-AbKleYhQ6afiBCAdgy6WSIn8aBm6Q
 
 [muathongminh.vn]
 match = -142.9%%
