--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-06 18:24:00
+lastsearch = 2024-08-06 22:45:51
 
 [www.facebook.com]
 match = -45.0%%
 title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
-url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
+url = https://www.facebook.com/pyeoda.vn/?locale=vi_VN
 
 [demxanh.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = 5.0%%
-title = Bộ chăn ga gối pyeoda
-url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
+match = -30.0%%
+title = Bộ chăn ga gối lụa pyeoda sky silk
+url = https://www.khodemthanhdo.com/products/bo-chan-ga-goi-lua-pyeoda-sky-silk
 
 [pyeoda.vn]
 match = -95.0%%
@@ -100,4 +100,9 @@ url = https://remdemgiaphat.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-
 match = -75.0%%
 title = Chăn ga gối Singapore Pyeoda Sky silk 5 món mã 18
 url = https://changagoidemdep.vn/chan-ga-goi-singapore-pyeoda-sky-silk-5-mon-ma-18.html
+
+[m.facebook.com]
+match = 0.0%%
+title = Chăn Ga Gối Đệm Pyeoda
+url = https://m.facebook.com/p/Chăn-Ga-Gối-Đệm-Pyeoda-100060362417762/?locale=vi_VN
 
