--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-06 20:25:03
+lastsearch = 2024-08-06 22:38:15
 
 [thamaulac.com.vn]
-match = -22.2%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
 match = -138.9%%
@@ -27,9 +27,9 @@ title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
 url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
 
 [shopee.vn]
-match = -111.1%%
-title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -100.0%%
+title = Thảm Xốp Ghép Sàn, Thảm Nỉ Ghép Sàn Tường Lâm 60*60
+url = https://shopee.vn/Thảm-Xốp-Ghép-Sàn-Thảm-Nỉ-Ghép-Sàn-Tường-Lâm-60*60-Hàng-Việt-Nam-10-Tâm-Bịch-i.167631306.14814457758
 
 [vatlieulotsan.com]
 match = -83.3%%
