--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-06 17:43:59
+lastsearch = 2024-08-06 22:31:10
 
 [suongtuyet.com]
 match = -4.0%%
@@ -12,9 +12,9 @@ title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
 url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông ép 3 mảnh Korea Gấm
-url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
+match = 8.0%%
+title = Đệm bông ép 3 mảnh Korea Kaki
+url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
 match = -72.0%%
