--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-06 21:21:43
+lastsearch = 2024-08-06 22:56:08
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -14,7 +14,7 @@ url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-g
 [demxanh.com]
 match = 38.7%%
 title = Chăn ga gối Singapore lụa 5 món L5M18
-url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html?srsltid=AfmBOopAPKmgdQY1deZM7arwEpmFT-1H_y3uCh8aHPU5uVzNN8F81KPg
+url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html
 
 [songhongonline.vn]
 match = 50.0%%
@@ -29,7 +29,7 @@ url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
 [foreverbedding.net]
 match = -3.2%%
 title = Màu Sắc Chăn Ga Gối Đệm Phong Thủy Cho Người Mệnh Hỏa
-url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa?srsltid=AfmBOooHhjjAYr9y5u2vK4sPfiCFvdvXA2uRzPcsWZEkJdjftlJU6qAX
+url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa
 
 [shopee.vn]
 match = -12.9%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -19.4%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOopdILzUJ6qHcru1C5bPbzvJ_TXb_URjbTt4QWjCqkM7Eivx3n4o
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [lizd.vn]
 match = 0.0%%
