--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-06 20:46:38
+lastsearch = 2024-08-06 22:53:18
 
 [www.dem365.vn]
-match = -81.0%%
-title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
+match = -61.9%%
+title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -82,9 +82,9 @@ title = Hạt Chặn Câu Đài, Hạt Chặn Silicon
 url = https://docauchinhhang.vn/hat-chan-cau-dai-hat-chan-silicon
 
 [vuadocau.com]
-match = -81.0%%
-title = Bộ 5 Chân Cắm Phao Câu Đài Cao Cấp Silicon Chống Xoắn
-url = https://vuadocau.com/bo-5-chan-cam-phao-cau-dai-cao-cap-silicon-chong-xoan/
+match = 9.5%%
+title = Bộ 5 chân phao câu đài cao cấp
+url = https://vuadocau.com/bo-5-chan-phao-cau-dai-cao-cap/
 
 [m.facebook.com]
 match = 19.0%%
@@ -100,4 +100,9 @@ url = https://zingtruyen.top/tag/phao-hoi-tu-chan-chi-nam/1.html
 match = -76.2%%
 title = Hộp đồ phụ kiện câu đài chân phao, khóa, chặn, linh
 url = https://docauvn.com/hop-do-phu-kien-cau-dai-chan-phao-khoa-chan-linh
+
+[congtynemthangloi.com.vn]
+match = -109.5%%
+title = Những điểm ưu việt của chăn phao mà không phải ai cũng biết
+url = https://congtynemthangloi.com.vn/chan-phao-la-gi-nhung-uu-diem-khong-phai-ai-cung-biet
 
