--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-07 00:20:03
 lastsearch = 2024-08-06 22:30:49
 
 [demxanh.com]
-match = -9.1%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 42.4%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -57,9 +57,9 @@ title = Chiếu Trúc Đen - Chăn ga gối đệm
 url = https://changagoidemdep.vn/chieu-truc-den.html
 
 [chieutrelanlan.com]
-match = 21.2%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+match = -30.3%%
+title = Chia sẻ những địa chỉ mua chiếu trúc tăm uy tín ở thành ...
+url = https://chieutrelanlan.com/chia-se-nhung-dia-chi-mua-chieu-truc-tam-uy-tin-o-thanh-pho-ho-chi-minh-k57.html
 
 [vongxepsaigon.vn]
 match = -30.3%%
@@ -160,4 +160,9 @@ url = https://hethongnemtot.com/chieu-truc
 match = 12.1%%
 title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
 url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117423477.html
+
+[thegioichieutruc.com]
+match = 0.0%%
+title = Địa chỉ bán chiếu trúc tại TP. Hồ Chí Minh (Sài Gòn)
+url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-tai-tp-ho-chi-minh-sai-gon/
 
