--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-06 22:24:58
+lastsearch = 2024-08-06 22:48:59
 
 [munghoangphat.com]
-match = 12.0%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
+match = -80.0%%
+title = Mùng chụp đỉnh vuôn 1m6 cao cấp, hàng chất lượng sản xuất ...
+url = https://munghoangphat.com/-1-cua-mung-dinh-vuong-1m6-x-2m-cao-cap.html
 
 [tiki.vn]
 match = -28.0%%
@@ -17,9 +17,9 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -12.0%%
-title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
+match = 4.0%%
+title = Màn chụp tự bung đỉnh vuông gia khánh loại 1 ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-gia-khánh-loại-1-Việt-Nam-1.6m-1.8m-2m-cao-1m70-mùng-chụp-đỉnh-rộng-hàng-đẹp-i.275105053.4839350056
 
 [www.mungbaobao.com]
 match = 48.0%%
