--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-06 21:32:30
+lastsearch = 2024-08-06 22:44:49
 
 [www.sendo.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an toàn
 url = https://thamtretho.com/
 
 [trieuchau.com]
-match = -200.0%%
-title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
+match = -209.1%%
+title = Thảm Xốp Trải Sàn 1mx1m - Hoạ Tiết Nước Biển
+url = https://trieuchau.com/vi-vn/1057/28773/Tham-Xop-1mx1m/Tham-Xop-Trai-San-1mx1m--Hoa-Tiet-Nuoc-Bien
 
 [www.lazada.vn]
 match = -109.1%%
@@ -102,9 +102,9 @@ title = Thảm xốp ghép vân gỗ tấm lớn 1m x 1m
 url = https://lamquangphat.vn/tham-xop-ghep-van-go-tam-lon-1m-x-1m.html
 
 [www.facebook.com]
-match = -90.9%%
-title = Nhok xop added a new photo.
-url = https://www.facebook.com/photo/?fbid=571343979648220&set=ecnf.100067405460051
+match = -200.0%%
+title = Thảm Xốp Trải Sàn Sỉ Lẻ | Ho Chi Minh City
+url = https://www.facebook.com/thamxopsile/
 
 [tranthanh.net]
 match = -154.5%%
