CI images update

--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-06 13:22:39
+lastsearch = 2024-08-07 00:20:56
 
 [demxanh.com]
 match = -3.3%%
@@ -77,9 +77,9 @@ title =
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [thegioinem.com]
-match = 13.3%%
-title = Chiếu Điều Hòa Tencel Thoáng Mát Giảm 20%% Tại ...
-url = https://thegioinem.com/chieu-dieu-hoa-3d-tencel.html
+match = 33.3%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [www.facebook.com]
 match = 52.0%%
