--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-06 23:21:08
+lastsearch = 2024-08-07 00:27:08
 
 [dreamland.vn]
 match = 7.5%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 [demluxury.com.vn]
 match = 47.8%%
 title = Chăn ga gối Dreamland Sale Off lên tới 50%% tại ...
-url = https://demluxury.com.vn/danh-muc-san-pham/chan-ga-goi-dem-dreamland/chan-ga-goi-dreamland/?srsltid=AfmBOork2uTytuVfP4hIgSEQQVjbQAF9TF7SbmpLc7CZScK3l43aFClp
+url = https://demluxury.com.vn/danh-muc-san-pham/chan-ga-goi-dem-dreamland/chan-ga-goi-dreamland/
 
 [www.facebook.com]
 match = -8.0%%
@@ -29,7 +29,7 @@ url = https://www.facebook.com/Dreamland.com.vn/
 [thegioidemonline.com]
 match = 62.8%%
 title = Bộ chăn ga gối Dreamland cotton lụa NK PT25
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html?srsltid=AfmBOoq3Nc8wFOlZQzWKaJC070mY653TQrodNuK6ll8sPLFeQT-nUmZr
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html
 
 [demdreamland.vn]
 match = 31.0%%
