--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-06 20:59:28
+lastsearch = 2024-08-07 00:15:42
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://www.facebook.com/photo.php?fbid=1194465754317379&id=139181649845800&set=a.179106562519975&locale=id_ID
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -335,4 +335,9 @@ url = https://masterisehomes.com/lumiere-boulevard/vn/project
 match = -160.0%%
 title = Đề cương ôn thi môn Lý [HK1 - Lớp 12] Flashcards
 url = https://quizlet.com/vn/556031834/de-cuong-on-thi-mon-ly-hk1-lop-12-flash-cards/
+
+[nttmachinery.com]
+match = -173.3%%
+title = ĐẦU LẮC LÉO 3/8″ HỆ INCH 12 CẠNH - NTTMACHINERY
+url = https://nttmachinery.com/cua-hang/dau-lac-leo-38-he-inch-12-canh/
 
