--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-06 22:52:35
+lastsearch = 2024-08-07 00:24:21
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -710,4 +710,9 @@ url = https://baotintuc.vn/chinh-tri/tong-bi-thu-nguyen-phu-trong-voi-dang-uy-kh
 match = -156.2%%
 title = Trải nghiệm 'Em vẽ sắc màu tình nguyện' đầy ý nghĩa
 url = https://baochinhphu.vn/trai-nghiem-em-ve-sac-mau-tinh-nguyen-day-y-nghia-102240806171448997.htm
+
+[nbtv.vn]
+match = -206.2%%
+title = Ninh Bình: Bắt các vụ án về mua bán và tổ chức sử dụng ...
+url = https://nbtv.vn/ninh-binh-bat-cac-vu-an-ve-mua-ban-va-to-chuc-su-dung-trai-phep-chat-ma-tuy-76723.html
 
