--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-06 16:35:06
+lastsearch = 2024-08-07 00:23:00
 
 [dongagroup.vn]
 match = -272.7%%
@@ -22,14 +22,14 @@ title = Giường tầng sắt
 url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
-match = -27.3%%
-title = Giuonggaphoaphat.com
-url = http://giuonggaphoaphat.com/
+match = -81.8%%
+title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
+url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
 
 [tunhuamiennam.com]
-match = -172.7%%
-title = giường nhựa cứng ecoplast cao cấp gec60
-url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
+match = -245.5%%
+title = giường liền tủ nhựa cứng ecoplast cao cấp gec31
+url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30-2/
 
 [giuongtang.mov.mn]
 match = -200.0%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -272.7%%
-title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
+match = -200.0%%
+title = Có bán Ga giường tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/bed-sheets/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -145.5%%
-title = MN-G2CN - Giường 2 chức năng - Pamed
+match = -409.1%%
+title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
@@ -225,4 +225,9 @@ url = https://www.agoda.com/vi-vn/country-inn-suites-by-radisson-woodbury-mn/hot
 match = -136.4%%
 title = 3 giường, 2 phòng tắm, Single Family
 url = https://www.kw.com/vi/property/lakeville-mn-55044/29001751
+
+[www.dungcuykhoathammytuankiet.com]
+match = -127.3%%
+title = Giường điện y tế 2 chức năng PN0143
+url = https://www.dungcuykhoathammytuankiet.com/products/giuong-dien-y-te-2-chuc-nang-pn0143
 
