CI images update

--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-06 22:39:19
+lastsearch = 2024-08-07 00:38:14
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Xiaomi Redmi Note 12 Turbo (Snapdragon 7+ Gen 2)
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-note-12-turbo-edition.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -57.1%%
+title = Adagio in G Minor (Albinoni)
+url = https://www.youtube.com/watch?v=XMbvcp480Y4
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -262,9 +262,9 @@ title =
 url = https://www.google.com/search?sca_esv=9267af3241730e66&sca_upv=1&q=Who+owns+Blue+Bottle+Coffee?&sa=X&ved=2ahUKEwju1cLS6dWHAxWnFVkFHbh3BiAQsZYEegQISBAC
 
 [m.facebook.com]
-match = -235.7%%
-title = Bored Panda - Dad leaves daughter high and dry after...
-url = https://m.facebook.com/story.php/?story_fbid=876152441214357&id=100064588278140
+match = -150.0%%
+title = Blue Archive - [Main Story Update Notice ...
+url = https://m.facebook.com/EN.BlueArchive/photos/main-story-update-noticethe-main-story-vol-1-foreclosure-task-force-chapter-3-pr/514503237762803/
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
