--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-06 22:01:31
+lastsearch = 2024-08-07 00:38:57
 
 [demxanh.com]
-match = -3.6%%
-title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
+match = -42.9%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
 match = 14.3%%
-title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
+title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
