CI images update

--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-06 22:44:49
+lastsearch = 2024-08-07 01:28:50
 
 [www.sendo.vn]
 match = 0.0%%
@@ -22,19 +22,19 @@ title = THẢM TRẢI SÀN NỈ DỆT CAO CẤP 18 TẤM
 url = https://shopee.vn/THẢM-TRẢI-SÀN-NỈ-DỆT-CAO-CẤP-18-TẤM-THẢM-XỐP-GHÉP-MIẾNG-TƯỜNG-LÂM-SANG-TRỌNG-PHÙ-HỢP-VỚI-MỌI-KHÔNG-GIAN-NỘI-THẤT-i.157222824.3315202784
 
 [thamtretho.com]
-match = -363.6%%
-title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an toàn
+match = -354.5%%
+title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an ...
 url = https://thamtretho.com/
 
 [trieuchau.com]
-match = -209.1%%
-title = Thảm Xốp Trải Sàn 1mx1m - Hoạ Tiết Nước Biển
-url = https://trieuchau.com/vi-vn/1057/28773/Tham-Xop-1mx1m/Tham-Xop-Trai-San-1mx1m--Hoa-Tiet-Nuoc-Bien
+match = -200.0%%
+title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [www.lazada.vn]
-match = -109.1%%
-title = Thảm Xốp Lót Sàn - BỘ gồm 18 MIẾNG
-url = https://www.lazada.vn/products/tham-xop-lot-san-bo-gom-18mieng-i1865380749.html
+match = -136.4%%
+title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
+url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html
 
 [tayphuthuan.com]
 match = -154.5%%
