--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-06 17:58:35
+lastsearch = 2024-08-07 01:30:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -102,8 +102,8 @@ title = mibetel hct 40mg|Casino Online Châu Á: Đánh Thức Mọi ...
 url = https://tuyensinh.epu.edu.vn/xiazai/mibetel-hct-40mg.phtm
 
 [chuthapdotphcm.org.vn]
-match = -187.5%%
-title = Lớp Sơ cấp cứu cơ bản Khóa 13, ngày 03/8/2024 (thứ bảy)
+match = -193.8%%
+title = Lớp Sơ cấp cứu cơ bản Khóa 14, ngày 07/9/2024 (thứ bảy)
 url = https://chuthapdotphcm.org.vn/tin-tuc/thong-bao-chieu-sinh-lop-so-cap-cuu
 
 [bandantoc.soctrang.gov.vn]
@@ -212,9 +212,9 @@ title = BẢN TIN THỜI SỰ NGÀY 3/8/2024
 url = https://dangcongsan.vn/video
 
 [soctrang.gov.vn]
-match = -200.0%%
-title = Họp chuẩn bị tổ chức giải Vô địch các Câu lạc bộ Cầu mây ...
-url = https://soctrang.gov.vn/mDefault.aspx?sname=svhttdl&sid=1294&pageid=2665&catid=64931&id=382425&catname=The-thao&title=Hop-chuan-bi-to-chuc-giai-Vo-dich-cac-Cau-lac-bo-Cau-may-quoc-gia-nam-2024
+match = -218.8%%
+title = Danh sách người phát ngôn và cung cấp thông tin trên địa ...
+url = https://soctrang.gov.vn/mDefault.aspx?sname=ubnd-stg&sid=4&pageid=86&catid=54274&catname=Danh-sach-nguoi-phat-ngon-va-cung-cap-thong-tin-tren-dia-ban-tinh-Soc-Trang
 
 [delhidentalcouncil.in]
 match = -75.0%%
