--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-06 22:38:37
+lastsearch = 2024-08-07 01:24:07
 
 [www.everonvn.vn]
 match = 56.5%%
@@ -32,14 +32,14 @@ title = Ruột gối everon 45x65 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ruột gối everon 45x65
 
 [thegioichanra.com]
-match = 6.9%%
-title = Ruột Gối Nằm Standard Everon Kích Thước 45×65 cm
-url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc-45x65-cm/
+match = 10.3%%
+title = Ruột Gối Nằm Classic Everon Kích Thước 45×65 cm
+url = https://thegioichanra.com/san-pham/ruot-goi-nam-classic-everon-kich-thuoc-45x65-cm/
 
 [everon.com.vn]
 match = 48.3%%
-title = RUỘT GỐI EVERON STANDARD SOFT
-url = https://everon.com.vn/ruot-goi-standard-soft/
+title = Ruột Gối Everon Micro Evermic
+url = https://everon.com.vn/ruot-goi-everon-micro-evermic/
 
 [suongtuyet.com]
 match = 13.8%%
