--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-06 21:47:01
+lastsearch = 2024-08-07 01:25:09
 
 [xoptraisan.info]
 match = -170.6%%
@@ -92,9 +92,9 @@ title = Thảm xốp gấp gọn hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm xốp gấp gọn
 
 [www.cia.gov]
-match = -147.1%%
-title = SCIENTIFIC ABSTRACT FEDOROV, M.V. - FEDOROV, I.G.
-url = https://www.cia.gov/readingroom/document/cia-rdp86-00513r000412620014-1
+match = -123.5%%
+title = SCIENTIFIC ABSTRACT BAYER, Z. - BAYEV, A. K.
+url = https://www.cia.gov/readingroom/document/cia-rdp86-00513r000204020016-6
 
 [www.threads.net]
 match = -164.7%%
