CI images update

--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-06 23:26:15
+lastsearch = 2024-08-07 01:45:09
 
 [tiki.vn]
 match = -133.3%%
@@ -17,9 +17,9 @@ title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
 url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
 
 [www.lazada.vn]
-match = -153.3%%
-title = Chăn lông cừu ULTIMATE xuất Mỹ 2x2,3m loại 1 màu ...
-url = https://www.lazada.vn/products/chan-long-cuu-ultimate-xuat-my-2x23m-loai-1-mau-colorful-mau-moi-nhat-i796256899.html?srsltid=AfmBOooQOzcvwrw0ui4Bz7gf-EBERqZr7okuATiZlefv7sC7FyTxRe-L
+match = -166.7%%
+title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chan-long-cuu-2m/?srsltid=AfmBOoqBWRUHcu05GSBn1LKjKGzkcKcbOt7IyHP9G7DEGp7mAnXwKvxZ
 
 [tokyolife.vn]
 match = -193.3%%
@@ -32,9 +32,9 @@ title = Chăn Lông Cừu Đại Hàn Loại 1 dày nặng 2.5kg Siêu Ấm
 url = https://trandungmart.vn/chan-long-cuu-dai-han-loai-1-day-nang-2-5kg-sieu-am
 
 [lasantevn.com]
-match = -193.3%%
-title = Các loại chăn lông cừu: Sản phẩm nào được tin dùng nhất?
-url = https://lasantevn.com/cac-loai-chan-long-cuu/
+match = -200.0%%
+title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasante
+url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
 match = -173.3%%
@@ -94,7 +94,7 @@ url = https://www.dem365.vn/chan-long-cuu-gia-re/
 [demxanh.com]
 match = -73.3%%
 title = Chăn lông cừu Normal mã 12 Hoa kẻ ngang
-url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html
+url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html?srsltid=AfmBOorKOb8xq7hOf3Hq7XfNID_Xtx9lj9GzAfWW5mmIX_aWsLwBsBYo
 
 [shope.io.vn]
 match = -186.7%%
