--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-07 01:24:48
+lastsearch = 2024-08-07 01:36:31
 
 [vinatools.com]
 match = -140.0%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -186.7%%
-title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
-url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -187,9 +187,9 @@ title = Đầu lắc xi lanh FJ - Khớp nối đầu lắc các cỡ M5,6,8,10,
 url = https://shopee.vn/Đầu-lắc-xi-lanh-FJ-Khớp-nối-đầu-lắc-các-cỡ-M5-6-8-10-12-14-16-18-20-27-(chính-hãng-SNS)-i.1096166656.24605536524
 
 [www.ministop.vn]
-match = -93.3%%
-title = List of all shops | Shop Location
-url = https://www.ministop.vn/en/ms/all
+match = -26.7%%
+title = Danh sách tất cả cửa hàng
+url = https://www.ministop.vn/ms/all
 
 [austronggroup.com.vn]
 match = -66.7%%
@@ -345,4 +345,14 @@ url = https://thudaumot.binhduong.gov.vn/chi-tiet?id=ART240700000115
 match = -213.3%%
 title = Bộ giảm chấn quay TRD-D2 cho cửa trượt, bản lề đóng ...
 url = http://vn.shtydamper.com/rotary-damper/gear-damper/trd-d2-rotary-damper-for-sliding-door-door.html
+
+[mdee-ain.eu]
+match = -33.3%%
+title = câu lạc bộ quay sw calgary
+url = https://mdee-ain.eu/eebnw/vi/câu-lạc-bộ-quay-sw-calgary
+
+[www.optomaeurope.com]
+match = 13.3%%
+title = Máy chiếu DLP®
+url = https://www.optomaeurope.com/ContentStorage/Documents/b2b0b38f-8765-4d0c-8a50-52c7b3b74a5e.pdf
 
