--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-08-06 20:56:15
+lastsearch = 2024-08-07 01:38:14
 
 [www.kymdan.com]
-match = -333.3%%
-title = Kymdan
-url = https://www.kymdan.com/home.do?lang=en
+match = -15.6%%
+title = Kymdan natural latex mattresses and pillows
+url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe?lang=en
 
 [thegioidemviet.vn]
 match = 0.0%%
