--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-07 01:34:24
+lastsearch = 2024-08-07 01:45:51
 
 [shopee.vn]
-match = 34.8%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M4X1M95
-url = https://shopee.vn/CHIẾU-TRÚC-THANH-CAO-BẰNG-1M4X1M95-i.231768286.18532306098
+match = -43.5%%
+title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
+url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
 
 [www.diepxuan.com]
 match = 26.1%%
