--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-07 00:55:10
+lastsearch = 2024-08-07 01:36:10
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -29,12 +29,12 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOop2ILGNV-PGwqUVMYBeQ89p2Gk-wrXG_4M2tdZiKtSJpGk-C2Yg
+url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -76.2%%
-title = Chiếu trúc chiếu tre 120cm hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-120cm-hat-nau-den-hang-tot-loai-1/
+match = -47.6%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-80cm/
 
 [thegioichieutruc.com]
 match = -47.6%%
