--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-07 00:20:36
+lastsearch = 2024-08-07 01:40:39
 
 [www.diepxuan.com]
 match = 40.6%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoosKKdOgPJkrQegC4j-NsDPH2kSnek9h59xyWH4rdDB5riHnZYd
 
 [demxanh.com]
-match = -40.6%%
-title = Đệm cao su Dunlopillo Latex World Pure giá rẻ nhất Hà Nội
-url = https://demxanh.com/dem-cao-su-dunlopillo-latex-world-pure.html
+match = 25.0%%
+title = Đệm bông ép Dreamland 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html?srsltid=AfmBOophURR1POdInU49yjRca5a3J3ZuUJAg0k2LUbuHP7m43MjqdfeB
 
 [changagoidemdep.vn]
 match = -12.5%%
@@ -72,9 +72,9 @@ title = Xả kho thanh lý chăn ga gối đệm tháng 8.2022
 url = https://thegioidemonline.com/xa-kho-thanh-ly-chan-ga-goi-dem-thang-82022.html
 
 [www.emag.hu]
-match = -50.0%%
-title = Best Sleep Vitalitás Bambusz Ortopéd Matrac 12 + 2 + 6, ...
-url = https://www.emag.hu/best-sleep-vitalitas-bambusz-ortoped-matrac-12-2-6-200x180x20-cm-poliuretanhab-memoriaval-es-kokuszrosttal-hipoallergen-antibakterialis-leveheto-huzat-bambusz-szalakkal-kozepes-szilardsagu-59492800430/pd/D9C4DNMBM/
+match = -28.1%%
+title = Fantastic Memory ortopédiai matrac, 180x200 + Ajándék ...
+url = https://www.emag.hu/fantastic-memory-ortopediai-matrac-180x200-ajandek-matracvedo-10/pd/DYQ3CCBBM/
 
 [www.dreamland.vn]
 match = 3.8%%
