--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-06 20:02:16
+lastsearch = 2024-08-07 01:55:15
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOor-SMhz2faytmZe9ziB5T3Yta__HwePfOb4hCoYoIBFAjDWigoY
+url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
 match = -240.0%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -226.7%%
+title = Moss - Thấy vậy chứ nói quậy là hem chịu nha, mấy bà qua...
+url = https://www.facebook.com/story.php/?story_fbid=901938211972572&id=100064692038657
 
 [hoc247.vn]
 match = -213.3%%
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOorLqAi2ritXDEJkd0QZpn8BOQ9zJY-HRWUSOXbK_iIF3CKzLIEz
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
 
 [www.nhathuocankhang.com]
 match = -220.0%%
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOopOrvWjTu_vb-q7VUhsWDuaTaVXsemdd9TN7vX6maQ-ey-N9CAe
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
