--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-06 15:43:35
+lastsearch = 2024-08-07 01:52:11
 
 [www.youtube.com]
 match = -40.7%%
@@ -47,9 +47,9 @@ title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
 url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -55.6%%
-title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
-url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
+match = -44.4%%
+title = Cách chặn tất cả cuộc gọi đến Viettel, MobiFone ...
+url = https://www.thegioididong.com/hoi-dap/cach-chan-cuoc-goi-den-mang-viettel-mobifone-vinaphone-1363346
 
 [dienmaycholon.vn]
 match = -44.4%%
@@ -147,9 +147,9 @@ title = Người góp phần làm khởi sắc bản biên giới Mùa Xuân
 url = https://www.bienphong.com.vn/nguoi-gop-phan-lam-khoi-sac-ban-bien-gioi-mua-xuan-post477378.html
 
 [m.facebook.com]
-match = 22.2%%
-title = Ai cười xuống tận tầng 19 nhá
-url = https://m.facebook.com/groups/groupyeubep/posts/2283919468658862/
+match = -25.9%%
+title = Hội Nhiều Chuyện | 1000 cuộc gọi nhỡ từ Nam Thư
+url = https://m.facebook.com/groups/572348384121798/posts/1271214250901871/
 
 [vietbao.com]
 match = -22.2%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -48.1%%
-title = Cách tìm lại nhật ký cuộc gọi đã xóa trên Android và ...
-url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-tim-lai-nhat-ky-cuoc-goi-da-xoa-tren-android-va-iphone
+match = -44.4%%
+title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
