--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-07 00:48:31
+lastsearch = 2024-08-07 01:47:20
 
 [shopee.vn]
 match = 7.4%%
@@ -12,14 +12,14 @@ title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [h5.lazada.vn]
-match = -33.3%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, chăn thái sịn ...
-url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-thai-sin-cho-mua-dong-am-ap-loai-2kg3kg4kg5kg-xuonggaubong88-i2050625587-s9572474215.html
+match = -11.1%%
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [www.lazada.vn]
-match = -48.1%%
-title = Chăn Nhung Mùa Đông Thành Công,Loại 2kg, 3kg, 4kg, 5kg
-url = https://www.lazada.vn/products/chan-nhung-long-tuyet-chan-nhung-mua-dong-thanh-congloai-2kg-3kg-4kg-5kg-i2043299346.html
+match = -44.4%%
+title = Mền Lông Tuyết Thái Giá Tốt T08/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
 match = 11.1%%
