--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -23,8 +23,8 @@ url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
-url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [tienphong.vn]
 match = 3.7%%
@@ -149,7 +149,7 @@ url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 [demxanh.com]
 match = 11.1%%
 title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html?srsltid=AfmBOopAEAeu9Hn0r3KWLsN2zMHL1x07JPCq5GdMyFChzjk_zWayddIZ
 
 [vnvc.vn]
 match = -59.3%%
