--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-06 20:33:45
+lastsearch = 2024-08-07 01:45:36
 
 [www.instagram.com]
 match = -30.8%%
@@ -24,7 +24,7 @@ url = https://www.creativeboom.com/inspiration/hoi-chan/
 [www.facebook.com]
 match = 33.3%%
 title = Yuk Hoi Chan
-url = https://www.facebook.com/yukhoi.chan.9/
+url = https://www.facebook.com/hoihihoi/
 
 [happypaca.tumblr.com]
 match = -276.9%%
