--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-06 20:55:56
+lastsearch = 2024-08-07 01:51:29
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu trúc hạt
 [demxanh.com]
 match = -9.7%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqmae4ihrpE_ehkN26JyVXHfpK08Y88EybpkbuTKR4ArZEB-9sz
 
 [www.sendo.vn]
 match = 3.2%%
