--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-06 22:48:59
+lastsearch = 2024-08-07 01:46:37
 
 [munghoangphat.com]
-match = -80.0%%
-title = Mùng chụp đỉnh vuôn 1m6 cao cấp, hàng chất lượng sản xuất ...
-url = https://munghoangphat.com/-1-cua-mung-dinh-vuong-1m6-x-2m-cao-cap.html
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
 match = -28.0%%
@@ -17,14 +17,14 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = 4.0%%
-title = Màn chụp tự bung đỉnh vuông gia khánh loại 1 ...
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-gia-khánh-loại-1-Việt-Nam-1.6m-1.8m-2m-cao-1m70-mùng-chụp-đỉnh-rộng-hàng-đẹp-i.275105053.4839350056
+match = -12.0%%
+title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
+match = 24.0%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Màn chụp tự bung đỉnh vuông cao cấp
 url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 
 [www.lazada.vn]
-match = 4.0%%
-title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
-url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html?srsltid=AfmBOoqRX8i5RTHyvTaks_3feiU3sBz0AdJudLc8poESiwqCh03LKdTK
+match = 28.0%%
+title = Mùng Tự Bung đỉnh Vuông Giá Tốt T08/2024
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/?srsltid=AfmBOopby1UPmt49RcrPF7bYJ7_9oZjLqxYGuVhZlYL8dSlMzgW_hOrw
 
 [everonvn.com.vn]
 match = 0.0%%
@@ -58,8 +58,8 @@ url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-ma
 
 [easydream.vn]
 match = -40.0%%
-title = TOP 5 MÙNG CHỤP TỰ BUNG - MÀN CHỤP CAO CẤP EASY ...
-url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
+title = Mùng Chụp Tự Bung Gấp Gọn Người Lớn Biên Hòa Đồng Nai
+url = https://easydream.vn/mung-chup-tu-bung-gap-gon-nguoi-lon-bien-hoa-dong-nai-287-25.html
 
 [www.youtube.com]
 match = -52.0%%
