--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-07 01:24:07
+lastsearch = 2024-08-07 01:56:18
 
 [www.everonvn.vn]
 match = 56.5%%
@@ -32,9 +32,9 @@ title = Ruột gối everon 45x65 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ruột gối everon 45x65
 
 [thegioichanra.com]
-match = 10.3%%
-title = Ruột Gối Nằm Classic Everon Kích Thước 45×65 cm
-url = https://thegioichanra.com/san-pham/ruot-goi-nam-classic-everon-kich-thuoc-45x65-cm/
+match = 6.9%%
+title = Ruột Gối Nằm Standard Everon Kích Thước 45×65 cm
+url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc-45x65-cm/
 
 [everon.com.vn]
 match = 48.3%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOor4iELfS5rPlYI0F-TWFchaTdB3yXp0T3DaKdAOrmi2JwYm8lKw
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
 [everonvn.com.vn]
 match = -20.7%%
