--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-06 22:56:08
+lastsearch = 2024-08-07 02:11:12
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -12,14 +12,14 @@ title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = 38.7%%
-title = Chăn ga gối Singapore lụa 5 món L5M18
-url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html
+match = -6.5%%
+title = Chăn ga gối Singapore Perfect Mordern Collection PM18
+url = https://demxanh.com/chan-ga-goi-singapore-perfect-modern-collection-pm18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UT23 032
-url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
+match = 54.8%%
+title = Bộ chăn ga gối trẻ em SH_JC22 002
+url = https://songhongonline.vn/products/bo-chan-ga-goi-tre-em-sh-yc22-002
 
 [changagoidemsonghong.com]
 match = -29.0%%
