--- a/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-180x200-hq.html
 lastopen = 2024-06-10 01:18:52
 
 [search]
-lastsearch = 2024-08-07 01:31:37
+lastsearch = 2024-08-07 02:16:44
 
 [www.diepxuan.com]
 match = 45.0%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOopbVXnOmXRVWlSi_KMVyyqeF0L1USelek6NMh1GMXRKeetOr6-k
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [www.amazon.com]
 match = 10.0%%
