--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-06 22:28:25
+lastsearch = 2024-08-07 02:10:30
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv53/
 [www.diepxuan.com]
 match = -4.8%%
 title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOoo1PSS8ElQuxJearfGgwF40tFRYo5AORmD46EvjPtJCYIrjKFWx
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOopHp4jexfu_wU2uMtPji0vD2qBZ22qKmcCMKelWHHbcMVuZJZVx
 
 [lasantevn.com]
 match = -57.1%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOorbnHdLFT6Y_T4qAI8MXHUJ1oIMeMVJb-ChKCObeySMlW4-P5o4
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOop94RPHDYZyRqJLHEQv2sA8WN7ZCyv5G8eeVt0syFruImBRw9Id
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14
+url = https://foreverbedding.net/bo-ga-chun-velina-v14?srsltid=AfmBOorOQgX3PCn4g8Sbg8JaLuJUHQTenmy-uTv912SqsvsJlBDi3NNx
 
 [changmibedding.com]
 match = -33.3%%
