--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-07 02:01:35
+lastsearch = 2024-08-07 02:25:17
 
 [demxanh.com]
 match = 26.1%%
 title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOorw3N1Uy2ARnafxkNxZgJZ4vYGAAFLXxBsND-oyqFfDpEA3AQMy
+url = https://demxanh.com/chan-long-3kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 26.1%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOooRqcehNTkPuzS5QLnf6mbvMf_kNfrKNwDT54kxMmlVG45AN-JZ
+url = https://www.diepxuan.com/chan-kq-song-5kg.html
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOootBgYKq0RooTYDHtFezfqqx_9II8Nq4Dn0Z1wOxW3BUlSc0Tpj
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
 match = -87.0%%
