--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-06 22:33:31
+lastsearch = 2024-08-07 02:20:48
 
 [shopee.vn]
 match = 56.2%%
@@ -290,4 +290,9 @@ url = https://olm.vn/cau-hoi/bao-cao-dong-chi-rua-bo-hoi-co-may-chan.26023609861
 match = -218.8%%
 title = Bài tập cuối tuần Tiếng Việt lớp 2 Tuần 24 Chân trời sáng ...
 url = https://www.vietjack.com/de-kiem-tra-lop-2/bai-tap-cuoi-tuan-tieng-viet-lop-2-tuan-24-ctst.jsp
+
+[www.dtac.co.th]
+match = -37.5%%
+title = dtac network area nationwide
+url = https://www.dtac.co.th/en/network/coverage.html
 
