--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-07 01:41:20
+lastsearch = 2024-08-07 02:12:36
 
 [hoa18.com]
-match = -84.2%%
-title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
-url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
+match = -87.5%%
+title = Sản phẩm
+url = https://hoa18.com/shop/page/8
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -133,8 +133,8 @@ url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam
 
 [shopee.vn]
 match = -121.1%%
-title = [Chỉ Giao HCM Ship Hỏa Tốc] Bó Hoa Cúc Tana Tươi( 1 Bó)
-url = https://shopee.vn/-Chỉ-Giao-HCM-Ship-Hỏa-Tốc-Bó-Hoa-Cúc-Tana-Tươi(-1-Bó)-Hoa-Tươi-Hoa18-i.52741467.16241410836
+title = Nhang nở hoa - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/nhang/nở hoa
 
 [baobinhdinh.vn]
 match = -110.5%%
