--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-07 00:58:56
+lastsearch = 2024-08-07 02:19:05
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -25.0%%
-title = Hà Nội Riviu - Riviu.vn
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1472305546766510/
+match = -137.5%%
+title = 🛑 TRỰC TIẾP: U18 BẠC LIÊU - TÙNG DƯƠNG FC 🚩Giải ...
+url = https://m.facebook.com/Tynguyenmedia.vn/videos/-trực-tiếp-u18-bạc-liêu-tùng-dương-fc-giải-bóng-đá-u18-vsports-toàn-quốc-mùa-3-2/1640507346746178/
 
 [baomoi.com]
 match = -193.8%%
