--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-07 01:19:13
+lastsearch = 2024-08-07 02:18:24
 
 [www.galottery.com]
 match = -7.7%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
-url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
+match = -238.5%%
+title = 0460-204-12141 Size 12 Contact 14-12 Ga | Prowireusa
+url = https://www.deutschconnectorstore.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
@@ -477,9 +477,9 @@ title = Map the Meal Gap: Hunger & Poverty in the United States
 url = https://map.feedingamerica.org/
 
 [www.ncbi.nlm.nih.gov]
-match = -276.9%%
-title = Current status of white coat hypertension: where are we?
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7318827/
+match = -176.9%%
+title = Penetrating Cardiac Injury: A Review - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4004985/
 
 [jaehakim.substack.com]
 match = 0.0%%
