--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-07 01:48:44
+lastsearch = 2024-08-07 02:13:57
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,9 +17,9 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = -28.6%%
-title = Thảm trải sàn bali 2m x 3m mẫu mới 2023 ...
-url = https://www.lazada.vn/products/tham-trai-san-bali-2m-x-3m-mau-moi-2021-tham-trai-san-phong-khach-phong-ngu-sofa-phong-ban-tra-tham-lon-5d-chat-nhung-mau-co-dien-hoang-gia-i1129074592.html
+match = 33.3%%
+title = Thảm bali trải sàn 2m x 3m
+url = https://www.lazada.vn/products/tham-bali-trai-san-2m-x-3m-i2001001992.html?srsltid=AfmBOopm2Y8lUXXr0F9U4uJXH_YoM1GOp1sY6hxU1lWjUGTWYNx1RnbN
 
 [tiki.vn]
 match = -9.5%%
