--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-07 01:27:48
+lastsearch = 2024-08-07 02:24:35
 
 [www.lazada.vn]
 match = -27.8%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 44.4%%
-title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://ninhouse.vn/products/vo-goi-khach-san
 
 [tonybed.vn]
 match = 22.2%%
