--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-07 01:41:00
+lastsearch = 2024-08-07 02:38:59
 
 [everon.online]
 match = 50.0%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 5.9%%
-title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
+match = 17.6%%
+title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
+url = https://vuanem.com/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet.html
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -122,9 +122,9 @@ title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=jadi-anime-cap-cut-template-4&ht=480&wd=640&url=https://xn--b1af6a4ab0d.xn--p1ai/1342695xjjbz1cfd4fe43y
 
 [everon.com]
-match = -150.0%%
-title = Bộ chăn ga
-url = https://everon.com/danh-muc-san-pham/bo-chan-ga
+match = -1500.0%%
+title = Ga
+url = https://everon.com/danh-muc-san-pham/ga
 
 [songhong.info]
 match = 2.9%%
