--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-07 01:50:25
+lastsearch = 2024-08-07 02:25:15
 
 [everon.online]
 match = 50.0%%
@@ -12,19 +12,19 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonvn.com.vn]
-match = 5.9%%
-title = Bộ Ga Chun At-04 Giảm Giá - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/136/bo-he-everon
+match = -4.3%%
+title = Bộ chăn ga Everon SR-16
+url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16?srsltid=AfmBOorllpMlX3FDT3_VB691NtkBNxwCeLXqe4HGFUDG_AEBhPXTruKb
 
 [tiki.vn]
 match = 29.4%%
-title = Mua Bộ ga chun chần bốn mùa Everon EPC22046 ( 01 ...
-url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22046-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829400.html?itm_campaign=tiki-reco_UNK_DT_UNK_UNK_seller-widget_UNK_seller-widget-v1_202311130600_MD_batched_PID.137114476&itm_medium=CPC&itm_source=tiki-reco&spid=137114476
+title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
+url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = 29.0%%
-title = Bộ chăn ga gối Everon ESB-22055
-url = https://everonhanquoc.com.vn/bo-chan-ga-goi-everon-esb-22055-pd.html
+match = 17.9%%
+title = Bộ chăn ga Everon EPBC-25014
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epbc-25014-pd.html
 
 [everonhn.com.vn]
 match = 22.2%%
@@ -84,7 +84,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-estr23056.html
 [demxanh.com]
 match = -2.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html?srsltid=AfmBOoqUWFVrvms3tjJo2bJRNjsFDoHaxVJuez31tuka5LNeS1ZGR4eR
 
 [antbedding.com]
 match = 26.5%%
