--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-07 01:55:15
+lastsearch = 2024-08-07 02:36:11
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -226.7%%
-title = Moss - Thấy vậy chứ nói quậy là hem chịu nha, mấy bà qua...
-url = https://www.facebook.com/story.php/?story_fbid=901938211972572&id=100064692038657
+match = 20.0%%
+title = Rạp Chiếu Phim Cũ
+url = https://www.facebook.com/phimhaygiare/
 
 [hoc247.vn]
 match = -213.3%%
