--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-07 01:46:37
+lastsearch = 2024-08-07 02:26:55
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = 12.0%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [tiki.vn]
 match = -28.0%%
@@ -17,14 +17,14 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -12.0%%
-title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
+match = -48.0%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
-match = 24.0%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
+match = 48.0%%
+title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
+url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -62,9 +62,9 @@ title = Mùng Chụp Tự Bung Gấp Gọn Người Lớn Biên Hòa Đồng Nai
 url = https://easydream.vn/mung-chup-tu-bung-gap-gon-nguoi-lon-bien-hoa-dong-nai-287-25.html
 
 [www.youtube.com]
-match = -52.0%%
-title = Hướng Dẫn Gấp Màn Chụp Tự Bung - Cách Gấp Màn Chụp ...
-url = https://www.youtube.com/watch?v=AEddlekH6zA
+match = -32.0%%
+title = Màn Chụp Tự Bung Đỉnh Vuông Gấp Gọn Thông Minh Thiên ...
+url = https://www.youtube.com/watch?v=nPMDzyjqoUI
 
 [www.facebook.com]
 match = -40.0%%
