--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-07 01:48:00
+lastsearch = 2024-08-07 02:38:38
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -5.6%%
-title = Nem Nướng Mỗ Lao - Hà Đông
-url = https://www.facebook.com/story.php/?story_fbid=767320398760395&id=100064473260604
+match = -127.8%%
+title = GIẦY KIDS - 🫓🫓🫓 Nem Nướng Phên - Đặc Sản Nha Trang ...
+url = https://www.facebook.com/58bngo.117.thai.ha/photos/-nem-nướng-phên-đặc-sản-nha-trang-em-lại-về-nem-nướng-phên-nha-trang-mời-các-bác/897465525760153/
 
 [thegioinem.com]
 match = -55.6%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -150.0%%
-title = ĂN THỬ ĐỦ LOẠI NEM (CHẢ GIÒ) KÈM 5 VỊ XỐT LẠ MIỆNG ...
-url = https://www.youtube.com/watch?v=ja68UaiEtQA
+match = -111.1%%
+title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
+url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.instagram.com]
 match = -127.8%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -133.3%%
+title = Nem nướng Chấn Hưng gia truyền nổi tiếng ở quận 5 ...
+url = https://www.tiktok.com/@tinhtungtangvn/video/7350226094391364866
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -94.4%%
-title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
+match = -83.3%%
+title = Ăn gì? Ở đâu? | NEM NƯỚNG NHA TRANG CHỈ...
+url = https://m.facebook.com/groups/hanoiangiodau/posts/1905052076634501/
 
 [emartmall.com.vn]
 match = 0.0%%
