--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -27,9 +27,9 @@ title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
 url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
 
 [thegioidemviet.vn]
-match = -21.7%%
-title = BẢNG GIÁ RUỘT GỐI MICRO VIỆT Á CHÍNH HÃNG
-url = https://thegioidemviet.vn/ruot-chan-ruot-goi-micro-viet-a-sao-chep/
+match = -39.1%%
+title = BẢNG GIÁ RUỘT GỐI BAMBOO - CHÍNH HÃNG VIỆT Á
+url = https://thegioidemviet.vn/ruot-chan-ruot-goi-viet-a-sao-chep/
 
 [goihuyhoang.com]
 match = -104.3%%
