--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-06 23:54:47
+lastsearch = 2024-08-07 02:26:17
 
 [www.reddit.com]
-match = -104.3%%
-title = Riot is cutting back budget on esports? : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -112,9 +112,9 @@ title = My favorite young male actors between 18-35
 url = https://www.imdb.com/list/ls055304256/
 
 [cryptoslate.com]
-match = -70.0%%
-title = NEM Tokens
-url = https://cryptoslate.com/blockchain/nem/
+match = -100.0%%
+title = NEM (XEM)
+url = https://cryptoslate.com/coins/nem/
 
 [koreanbuilds.net]
 match = -100.0%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -113.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [lol.fandom.com]
 match = 0.0%%
