--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-06 18:46:54
+lastsearch = 2024-08-07 02:28:40
 
 [www.amazon.com]
 match = -309.1%%
@@ -210,4 +210,9 @@ url = https://vaivinaco.com/tai-sao-nen-chon-boc-da-dem-ghe-go/
 match = -309.1%%
 title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
+
+[trunglanauto.com]
+match = -263.6%%
+title = Bọc ghế da napa 7 chỗ - Trung Lân Auto Service
+url = https://trunglanauto.com/nang-cap-noi-that/boc-ghe-da-napa-7-cho.html
 
