--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-06 22:19:08
+lastsearch = 2024-08-07 02:32:43
 
 [shopee.vn]
 match = -216.7%%
@@ -59,7 +59,7 @@ url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 [www.lazada.vn]
 match = -116.7%%
 title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
-url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html?srsltid=AfmBOorEv2NDifnKhDHSWvNeVkAbPwaQJhvddH_7CjhdV7TMZr6X9Wyl
+url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
 
 [vn.my-best.com]
 match = -233.3%%
