CI images update

--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-07 00:49:34
+lastsearch = 2024-08-07 03:28:08
 
 [demxanh.com]
-match = -15.4%%
-title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
-url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html?srsltid=AfmBOorFKRHM3IqKbo73L_5rGEAsCNhrwuvUQxXxtJA_J3Ke0ZiKv_2r
+match = 34.6%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -22,9 +22,9 @@ title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
 url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
 
 [foreverbedding.net]
-match = -53.8%%
-title = Giải Đáp Thắc Mắc Nên Mua Chiếu Điều Hòa Hay Chiếu Trúc?
-url = https://foreverbedding.net/nen-mua-chieu-dieu-hoa-hay-chieu-truc?srsltid=AfmBOoqkN4ed-mb4ffpBu7Pgp0j3nu3sa89YmMUeFh5WlhN1VEmvxgof
+match = 38.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -37,14 +37,14 @@ title = Chiếu điều hòa lụa 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 
 [shopee.vn]
-match = -34.6%%
-title = Chiếu Điều Hòa Viền Lụa Phong Anh Loại Dầy Sợi Mây ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-Viền-Lụa-Phong-Anh-Loại-Dầy-Sợi-Mây-Tổng-Hợp-Cao-Cấp-Chiếu-Điều-Hòa-Thông-Minh-Thoáng-Khí-Mát-Rượi-i.81313558.13044100887
+match = -30.8%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.lazada.vn]
 match = 42.3%%
 title = Chiếu Lụa điều Hòa Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/?srsltid=AfmBOorheEE3E_t1TpR-5okmWMRiYFTzzPU80zdMkCgeaOK-qlh-ErgS
+url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/
 
 [nanara.vn]
 match = 7.7%%
