--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-07 01:33:41
+lastsearch = 2024-08-07 03:16:21
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -202,9 +202,9 @@ title = TP. HCM: Các phái đoàn viếng tang Hòa thượng Thích ...
 url = https://phatsuonline.vn/tp-hcm-cac-phai-doan-vieng-tang-hoa-thuong-thich-hue-tri-sang-ngay-21-7-25
 
 [www.facebook.com]
-match = -112.5%%
-title = Review Quy Nhơn | 𝑇𝑟𝑜𝑛𝑔 𝑏𝑢𝑜̂̉𝑖 𝑐ℎ𝑖𝑒̂̀𝑢 𝑙𝑎̣𝑐 𝑙𝑜̃𝑛𝑔
-url = https://www.facebook.com/groups/ReviewQuyNhonHomestayKhachSanTourdulich/posts/𝑇𝑟𝑜𝑛𝑔-𝑏𝑢𝑜̂̉𝑖-𝑐ℎ𝑖𝑒̂̀𝑢-𝑙𝑎̣𝑐-𝑙𝑜̃𝑛𝑔-đ𝑜̂𝑖-𝑣𝑎𝑖-𝑔𝑎̂̀𝑦-𝑐ℎ𝑎̆̉𝑛𝑔-𝑐𝑜̃𝑛𝑔-𝑛𝑜̂̉𝑖-𝑏𝑎𝑜-𝑏𝑖́-𝑚𝑎̣̂𝑡/1453965548630377/
+match = -100.0%%
+title = Trường PTCS Nguyễn Đình Chiểu | Hanoi
+url = https://www.facebook.com/p/Trường-PTCS-Nguyễn-Đình-Chiểu-100083304616411/
 
 [www.yenbai.gov.vn]
 match = -193.8%%
