--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-07 01:34:43
+lastsearch = 2024-08-07 03:15:17
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -7.7%%
+title = David Cohn - Subtext
+url = https://www.linkedin.com/in/davidjcohn
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -445,4 +445,9 @@ url = https://www.engineering.pitt.edu/people/faculty/anne-robertson/
 match = -23.1%%
 title = Michael Irwin, M.D.
 url = https://bri.ucla.edu/people/michael-irwin/
+
+[www.csus.edu]
+match = -7.7%%
+title = COB Dean's Digest
+url = https://www.csus.edu/college/business-administration/_internal/_documents/deans-digest-january-2022-full.pdf
 
