--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-06 22:17:24
+lastsearch = 2024-08-07 03:14:55
 
 [changagoidemsonghong.com]
 match = -55.6%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Sateen-Mịn-Decor-Bo-Chun-10
 [lynconcept.com]
 match = -25.9%%
 title = Bộ Chăn Ga Gối Cotton 100%% Hàn Quốc In Hình Hoa Nhỏ ...
-url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16?srsltid=AfmBOoqyH1nIQmOWBR0ixlmGjS26ZbKT-xBhOsv9mgAgqRTyFQQbr348
+url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16
 
 [changagoidemsonghong.online]
 match = -7.4%%
