--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-07 02:22:12
+lastsearch = 2024-08-07 03:18:24
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -157,9 +157,9 @@ title = Tại sao cái *beep* gì cũng đổ lỗi tại Cộng Sản? - Tội 
 url = https://www.quyenduocbiet.com/a3405/tai-sao-cai-beep-gi-cung-do-loi-tai-cong-san-
 
 [www.tiktok.com]
-match = 28.6%%
-title = Phim Ma Da Chiếu Ở Hàn Khi Nào
-url = https://www.tiktok.com/discover/phim-ma-da-chiếu-ở-hàn-khi-nào
+match = -25.0%%
+title = Maya Mayti Danon
+url = https://www.tiktok.com/discover/maya-mayti-danon?lang=en
 
 [fvoupsjn.mescoffee.com]
 match = -85.7%%
@@ -350,4 +350,9 @@ url = https://gametv.vn/lmht/chi-tiet-vo-dai-2024-toi-da-16-nguoi-choi-voi-ban-d
 match = -10.7%%
 title = Conan không có đối thủ ở phòng vé Việt tháng 8
 url = https://www.msn.com/vi-vn/entertainment/news/conan-không-có-đối-thủ-ở-phòng-vé-việt-tháng-8/ar-AA1oedZC
+
+[www.mtu.edu.vn]
+match = 14.3%%
+title = The resource cannot be found.
+url = http://www.mtu.edu.vn/muv/lich-thi-dau-24h.aspx
 
