--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-08-07 02:38:15
+lastsearch = 2024-08-07 03:12:06
 
 [demxanh.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel tím nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-da-troi.html
+match = 27.6%%
+title = Chiếu điều hòa cao su non Tencel vàng chanh
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
 
 [tiki.vn]
 match = 20.7%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 13.8%%
-title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+match = 31.0%%
+title = Chiếu Điều Hòa Cao Su Non Dâu Thỏ Xám 160x200 ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-dau-tho-xam-160x200-180x200cm-phamuyen56-i1861397442.html
 
 [nanara.vn]
 match = 34.5%%
@@ -72,9 +72,9 @@ title = Chiếu cao cấp chính hãng Nhật Bản
 url = https://kyoryo.vn/chieu-cao-cap.html
 
 [changagoidemdep.vn]
-match = -10.3%%
-title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [www.nemuytin.com]
 match = -13.8%%
