--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-06 22:24:37
+lastsearch = 2024-08-07 03:26:44
 
 [demxanh.com]
 match = -14.8%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -33.3%%
+title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
 
 [goni.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = -37.0%%
-title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
+match = 29.6%%
+title = Chiếu điều hòa cao su non 1m8x2m - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
 
 [www.dienmayxanh.com]
 match = -48.1%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa là gì? Nằm chiếu điều hòa có mát không
 url = https://congtynemthangloi.com/chieu-dieu-hoa-la-gi-nam-chieu-dieu-hoa-co-mat-khong
 
 [suongtuyet.com]
-match = 18.5%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -29.6%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [tiki.vn]
 match = 33.3%%
