--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-06 20:47:50
+lastsearch = 2024-08-07 03:27:25
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -100.0%%
-title = Tim thai có khi nào? Thời điểm siêu âm tim thai lần đầu
-url = https://www.vinmec.com/vie/bai-viet/tim-thai-co-khi-nao-thoi-diem-sieu-am-tim-thai-lan-dau-vi
+match = -114.3%%
+title = Nhận diện kết quả bất thường khi siêu âm độ mờ da gáy ...
+url = https://www.vinmec.com/vie/bai-viet/nhan-dien-ket-qua-bat-thuong-khi-sieu-am-do-mo-da-gay-thai-nhi-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
