--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-07 01:52:31
+lastsearch = 2024-08-07 03:18:45
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -105.9%%
 title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdnoi5ZgX&sig=ACfU3U0OXEpGpudvCXQiWXjdO6XmM9lT7A&hl=en&sa=X&ved=2ahUKEwi4ueeE4uCHAxVEMlkFHR7ZDGcQ6AF6BAgjEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdnoj92fW&sig=ACfU3U0ZhDe_ogsnKbvS9k6G-RI7hmTKCA&hl=en&sa=X&ved=2ahUKEwjrzq-BmOGHAxWjweYEHSU6NTUQ6AF6BAgeEAM
 
 [www.house.gov]
 match = 11.8%%
@@ -685,4 +685,19 @@ url = https://oklahoma.gov/doc/offender-info.html
 match = -11.8%%
 title = Điều May Mắn - 14 Cành H515
 url = http://hoacuatroi.com/lan-ho-diep-1821/dieu-may-man-14-canh-h515-91228/
+
+[www.miamidade.gov]
+match = 29.4%%
+title = Building Homepage
+url = https://www.miamidade.gov/global/economy/building/home.page
+
+[www.nike.com]
+match = -5.9%%
+title = Sale Products. Nike VN
+url = https://www.nike.com/vn/w/sale-3yaep
+
+[www.johnlewis.com]
+match = -194.1%%
+title = John Lewis & Partners | Department Store | Home, Fashion ...
+url = https://www.johnlewis.com/
 
