--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-07 01:40:39
+lastsearch = 2024-08-07 03:22:12
 
 [www.diepxuan.com]
 match = 40.6%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoosKKdOgPJkrQegC4j-NsDPH2kSnek9h59xyWH4rdDB5riHnZYd
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
 match = 25.0%%
 title = Đệm bông ép Dreamland 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html?srsltid=AfmBOophURR1POdInU49yjRca5a3J3ZuUJAg0k2LUbuHP7m43MjqdfeB
+url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html
 
 [changagoidemdep.vn]
 match = -12.5%%
