--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-06 20:38:16
+lastsearch = 2024-08-07 03:22:33
 
 [shopee.vn]
 match = -76.2%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 [www.lazada.vn]
 match = -100.0%%
 title = Thảm (mền) nỉ nhung trải sàn trải giường 3 lớp 1.6 x 2m ...
-url = https://www.lazada.vn/products/tham-men-ni-nhung-trai-san-trai-giuong-3-lop-16-x-2m-tham-men-ni-nhung-trai-san-trai-giuong-3-lop-16-x-2m-i247710313-s322513280.html?&search=0?mp=1&scm=1007.16389.286994.0&clickTrackInfo=d057a3b7-3c13-40cd-9a87-2d282cfd27bf__247710313__12734__shop__224806__0.79995346__0.79995346__0.0__0.0__0.0__0.79995346__1__null__null__null__null__null__null____389000.0__0.4183341902313624__5.0__1__226268.0__16001,20001,23008,23048,24083,53901,67235,70973,72910,73238,74591,74595,78085,78155,80012,80015,82817,85607,88271,88274,88708,89297,89312,89491,90649,91254,92232,92271,95266,103150,104601,105538,105816,107335,110577,113326,115496__null__null__null__3650.16544_3650.16540_955.3632__null__13426__null__0.0__0.0________null__null&srsltid=AfmBOor1BfI2rBjrbttp4llnT9rgZr_zAz6pL2MtrdC-HKAea1VPOEt-
+url = https://www.lazada.vn/products/tham-men-ni-nhung-trai-san-trai-giuong-3-lop-16-x-2m-tham-men-ni-nhung-trai-san-trai-giuong-3-lop-16-x-2m-i247710313-s322513280.html?&search=0?mp=1&scm=1007.16389.286994.0&clickTrackInfo=d057a3b7-3c13-40cd-9a87-2d282cfd27bf__247710313__12734__shop__224806__0.79995346__0.79995346__0.0__0.0__0.0__0.79995346__1__null__null__null__null__null__null____389000.0__0.4183341902313624__5.0__1__226268.0__16001,20001,23008,23048,24083,53901,67235,70973,72910,73238,74591,74595,78085,78155,80012,80015,82817,85607,88271,88274,88708,89297,89312,89491,90649,91254,92232,92271,95266,103150,104601,105538,105816,107335,110577,113326,115496__null__null__null__3650.16544_3650.16540_955.3632__null__13426__null__0.0__0.0________null__null
 
 [tiki.vn]
 match = -38.1%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOordEqCwmvo8fNsQ850DNjLkt_9FnZoVjRpxGf14Xac7LtJHg33L
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
 
 [giuongxep.com]
 match = -57.1%%
