--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-07 02:14:40
+lastsearch = 2024-08-07 03:23:58
 
 [www.diepxuan.com]
-match = -31.2%%
-title = Túi Warmdream 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demxanh.com]
 match = -181.2%%
